--- a/images.html
+++ b/images.html
@@ -31,16 +31,19 @@
    </main> 
    <script>
 			//Step 1: Select all of the images on the page
-
 			
-			
+			var imgElement = document.getElementsByTagName('img'); 
+	   		
 			
 			
 
 			//Step 2: Change the second and fourth pictures on the page to the "lighthouseisland.jpg" picture in the 
 			//images folder
 
-			
+			if (imgElement.length > 0 ){
+				imgElement[1].src = "images/lighthouseisland.jpg";
+				imgElement[3].src = "images/lighthouseisland.jpg";
+			}
 			
 			
 			
