--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
           Name: <input type="text" name="name"><br>
           Address: <input type="text" name="name">
           <select name="state">
-            <option class = "state" value="UT">Utah</option>
-            <option class = "state" value="CA">California</option>
-            <option class = "state" value="NY">New York</option>
+            <option id="state1"class = "state" value="UT">Utah</option>
+            <option id="state2"class = "state" value="CA">California</option>
+            <option id="state3"class = "state" value="NY">New York</option>
           </select>        
       </fieldset>
       <input id="maleRB" type="radio" name="gender" value="male">
@@ -46,27 +46,35 @@
 	<script>
 			//Step 5: Set an id on each option in the select tag. Name the id's state1, state2, and state3.
 			//Change the states that are used in the dropdown box to "Missouri", "Iowa", "Nebraska". Use the states abbreviation for the value property.
-
 			
+			/*var statel = document.getElementById("state1");
+			statel.value = "MO";
+			statel.innerHTML= "Missouri";
 			
-			
-			
-			
-			
-			
+			var state2 = document.getElementById("state2");
+			state2.value = "IA";
+			state2.innerHTML = "Iowa";
+		
+			var state3 = document.getElementById("state3");
+			state3.value = "NE";
+			state3.innerHTML = "Nebraska";
+		
+		*/
 	
 			//Comment out the code for Step 5. On the Contact.html page, set a class id called "state" on each option in the select tag. 
 			//Write the code to change all of the states to the word "Hello". 
 
 			
+
 			
+			var state4 = document.getElementsByClassName("state");
 			
+			for( var a = 0; a <state4.length;a++){
+				state4[a].value = "Hello";
+				state4[a].innerHTML = "Hello";
+			}
 			
-			
-			
-			
-			
-			
+		
 	
 	</script>
 	</div>
